src/index.css
/* ./src/index.css */
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  font-family: 'Source Code Pro', monospace;
  height: 100%;
  margin: 0;
  padding: 0;
}

a {
  cursor: pointer;
  text-decoration: none;
}

:root {
  --darkForeground: #aaacae;
  --darkBackground: #2a2f34;
  --lightForeground: #000000;
  --lightBackground: #ffffff;
}

.dark {
  --color-primary-surface: #282a37;
  --color-primary-content: #e6e6e9;

  --color-secondary-surface: #1c2733;
  --color-secondary-content: #e19ce7;

  --color-variant-one: #f35399;
  --color-variant-two: #975d9c;

  --error: #cf6679;
  --on-error: #32191e;

  --color-foreground: #1c2733;
  --color-background: #2a2f34;

  --color-gray: rgba(255, 255, 255, 0.6);
  --color-gray-border: rgb(84 90 102 / 61%);

  --color-icon: #6e7681;

  --color-input: rgba(255, 255, 255, 0.6);
  --color-input-surface: #353b41;
  --color-input-focus: #00b4a7;
  --color-input-border: rgb(69 68 68 / 60%);

  --color-button-surface: #353b41;
  --color-button-content: rgba(255, 255, 255, 0.6);

  --color-bg-notes: #1a1c25;
}

.light {
  --color-primary-surface: #f5f7ff;
  --color-primary-content: #151513;

  --color-secondary-surface: #e9e5e4;
  --color-secondary-content: #843184;

  --color-variant-one: #f35399;
  --color-variant-two: #975d9c;

  --error: #b00020;
  --on-error: #f0d7d9;

  --color-foreground: #000000;
  --color-background: #ffffff;

  --color-gray: #6c6868;
  --color-gray-border: #cccdd3ed;

  --color-icon: #151513;

  --color-input: #160041;
  --color-input-surface: #fffbfe;
  --color-input-focus: #160041a8;
  --color-input-border: rgb(69 68 68 / 60%);

  --color-button-surface: #160041;
  --color-button-content: #fffbfe;

  --color-bg-notes: rgba(69, 68, 68, 0.993);

}

#app {
  height: 100%;
}

.root {
  background-color: var(--color-primary-surface)
}

.border-element {
  border: 1px solid var(--color-gray-border)
}

::-webkit-scrollbar {
  width: 5px;
}

::-webkit-scrollbar-track {
  background: #f1f1f1;
}

::-webkit-scrollbar-thumb {
  background: #888;
}

::-webkit-scrollbar-thumb:hover {
  background: #555;
}

